src/sk4rbonka/main/default/objects/sk4_child__c/sk4_child__c.object-meta.xml
<CustomObject>
    <label>Child</label>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Children</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>