src/sk4rbonka/main/default/objects/sk4_child__c/fields/sk4_balance2__c.field-meta.xml
<CustomField>
    <fullName>sk4_balance2__c</fullName>
    <label>Balance</label>
    <summarizedField>sk4_transfer__c.sk4_transferAmount__c</summarizedField>
    <summaryForeignKey>sk4_transfer__c.sk4_child__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>