src/sk4rbonka/main/default/objects/sk4_child__c/fields/sk4_balance__c.field-meta.xml
<CustomField>
    <fullName>sk4_balance__c</fullName>
    <formula>sk4_savingsSum__c - sk4_withdrawsSum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>