src/sk4rbonka/main/default/objects/sk4_child__c/fields/sk4_fullName__c.field-meta.xml
<CustomField>
    <fullName>sk4_fullName__c</fullName>
    <formula>Name + &apos; &apos; +  sk4_family__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>