src/sk4rbonka/main/default/objects/sk4_child__c/fields/sk4_withdrawsSum__c.field-meta.xml
<CustomField>
    <fullName>sk4_withdrawsSum__c</fullName>
    <label>Withdraws Sum</label>
    <summarizedField>sk4_transfer__c.sk4_transferAmount__c</summarizedField>
    <summaryFilterItems>
        <field>sk4_transfer__c.sk4_type__c</field>
        <operation>equals</operation>
        <value>Withdraw, Deduction</value>
    </summaryFilterItems>
    <summaryForeignKey>sk4_transfer__c.sk4_child__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>