src/sk4rbonka/main/default/objects/sk4_child__c/listViews/Wszystkie_moje.listView-meta.xml
<ListView>
    <columns>NAME</columns>
    <fullName>Wszystkie_moje</fullName>
    <columns>sk4_fullName__c</columns>
    <columns>sk4_family__c</columns>
    <columns>sk4_balance2__c</columns>
    <filterScope>Everything</filterScope>
    <label>Wszystkie moje</label>
</ListView>